:sparkles: update package-build

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "app-portfolio/",
+  "homepage": "./",
   "type": "module",
   "scripts": {
     "dev": "vite",
