--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "app-portfolio",
   "private": true,
   "version": "0.0.0",
-  "homepage": "./",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npx gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
+    "gh-pages": "^4.0.0",
     "sass": "^1.53.0",
     "vite": "^3.0.0"
   }
