--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "app-portfolio",
   "private": true,
+  "homepage": "https://edimilsonbraz.github.io/app-portfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "npx gh-pages -d dist"
+    "deploy": "npx gh-pages -d dist",
+    "publicar": "npm run build && ./node_modules/.bin/gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.2.0",
